# Kernel_Lab

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarks/: bench_attention.py  bench_rmsnorm.py  bench_softmax.py
docs/notes/: example.md  rmsnorm-triton.md  roadmap.md
docs/profiling/: README.md
kernel_lab/: __init__.py
kernel_lab/ops/: __init__.py  registry.py
kernel_lab/ops/common/: __init__.py  shapes.py  utils.py
kernel_lab/ops/cuda/: __init__.py  python_api.py
kernel_lab/ops/cuda/csrc/: bindings.cpp  rmsnorm.cu  softmax.cu
kernel_lab/ops/references/: __init__.py  rmsnorm_ref.py  rope_ref.py  softmax_ref.py
kernel_lab/ops/triton/: __init__.py  _common.py  attention_toy.py  rmsnorm.py  softmax.py  swiglu.py
scripts/: profile_ncu.sh  profile_nsys.sh
tests/: test_correctness.py  test_grad.py  test_opcheck.py
